# lc3-compiler

./: .gitignore  .gitmodules  Cargo.toml  README.md
analysis/: Cargo.toml
analysis/src/: analysis.rs  lib.rs  symbol_table.rs  symres.rs  symtab.rs  typecheck.rs  typedast.rs
codegen/: Cargo.toml
codegen/src/: asmprinter.rs  codegen.rs  lib.rs
docs/design/: todo.md
driver/: Cargo.toml
driver/src/: main.rs
in/: main.c
lex-parse/: Cargo.toml
lex-parse/src/: analysis.rs  ast.rs  context.rs  error.rs  lexer.rs  lib.rs  parser.rs  strings.rs  token.rs  types.rs
tests/: test.sh
tests/input/: array-alternative.c  array-max.c  big-struct.c  equals-equals.c  equals-equals2.c  fibonacci.c  for-loop.c  function-call-clobbering.c  linked-list.c  medium-struct.c  not-equals.c  not-equals2.c  ptr-alias.c  ptrs-again.c  simple-struct.c
tests/lc3tools-tests/: array-access.cpp  array-alternative.cpp  array-max.cpp  big-struct.cpp  equals-equals.cpp  equals-equals2.cpp  fibonacci.cpp  for-loop.cpp  function-call-clobbering.cpp  linked-list.cpp  lvalue-dereference.cpp  medium-struct.cpp  multiply.cpp  not-equals.cpp  not-equals2.cpp  ptr-alias.cpp  ptrs-again.cpp  simple-struct.cpp  simple.cpp  static-var-reference.cpp  static.cpp
