[package]
name = "lc3-compile"
version = "0.1.0"
edition = "2021"
authors = ["Xavier Routh - <xrouth2@illinois.edu>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
lex-parse = { path = "../lex-parse" }
# analysis = { path = "../analysis" }
